Prevent style jumping in WikiEditor
Add a new styles module. This module makes sure that the textarea is
already properly styled (jumping lineheight bug) before we start the
JS. Also hide the toolbar before it's styles have finished loading, so
you don't see it being constructed on the fly. Move inline styling for
the old toolbar into this stylesheet as well.

Bug: 47708

--- a/modules/jquery.wikiEditor.toolbar.css
+++ b/modules/jquery.wikiEditor.toolbar.css
@@ -4,6 +4,7 @@
 
 .wikiEditor-ui-toolbar {
 	position: relative;
+	display: block;
 }
 /* Expandable Sections */
 .wikiEditor-ui-toolbar .sections {
